<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/calculatorFragment">

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.example.caluladoradeimc.ui.calculator.CalculatorFragment"
        android:label="@string/calculadora_imc"
        tools:layout="@layout/fragment_calculator">

        <action
            android:id="@+id/action_calculatorFragment_to_historyFragment"
            app:destination="@id/historyFragment" />

        <action
            android:id="@+id/action_calculatorFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />

    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.caluladoradeimc.ui.history.HistoryFragment"
        android:label="@string/historial"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.caluladoradeimc.ui.about.AboutFragment"
        android:label="@string/acerca_de"
        tools:layout="@layout/fragment_about" />

</navigation>